<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">
    
	<EditText
	    android:id="@+id/title"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/title_hint" />
	
	<EditText
	    android:id="@+id/content"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="5dp"
	    android:layout_weight="1"
	    android:gravity="top|left"
	    android:hint="@string/content_hint" />
	
	<Button
	    android:id="@+id/submit"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/confirm" />
    
</LinearLayout>