<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">
    
    <TextView
        android:id="@+id/topic_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textSize="20sp"
        android:text="@string/hello_world"
        android:textColor="@color/success" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/topic_added_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/submit"
            android:textSize="15sp"
            android:layout_marginRight="5dp"
            android:textColor="@color/warning" />
        <TextView
            android:id="@+id/totpic_replied_times"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="2回复"
            android:gravity="right"
            android:textSize="13sp"
            android:paddingRight="5dp"
            android:textColor="@color/muted" />
        <TextView
            android:id="@+id/topic_click_times"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="2点击"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:gravity="right"
            android:textSize="13sp"
            android:textColor="@color/muted" />
        <TextView
            android:id="@+id/topic_author_nick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="爱因斯坦的狗"
            android:textSize="15sp"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:textColor="@color/success" />
    </LinearLayout>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <TextView
	        android:id="@+id/toptic_last_reply_hint"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="right"
	        android:text="@string/last_update_hine"
	        android:textSize="13sp"
	        android:layout_marginRight="5dp"
	        android:textColor="@color/muted" />
	    <TextView
	        android:id="@+id/topic_last_reply_time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="3小时前"
	        android:gravity="right"
	        android:layout_marginRight="5dp"
	        android:textSize="13sp"
	        android:textColor="@color/warning" />
	    <TextView
	        android:id="@+id/topic_last_reply_usernick"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"
	        android:text="@string/username"
	        android:textSize="14sp"
	        android:textColor="@color/muted"
	        android:paddingRight="5dp" />
	</LinearLayout>
    
</LinearLayout>