<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/user_icon"
            android:maxHeight="135dp"
            android:maxWidth="135dp"
            android:src="@drawable/face" />

        <TextView
            android:id="@+id/topic_author_nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/user_icon"
            android:paddingLeft="5dp"
            android:text="@string/hello_world"
            android:textColor="@color/muted"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/topic_author_statistics1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topic_author_nick"
            android:layout_toRightOf="@id/user_icon"
            android:paddingLeft="5dp"
            android:text="@string/hello_world"
            android:textColor="@color/success"
            android:textSize="12sp" />
        <!--
                 <TextView
                android:id="@+id/topic_author_statistics2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_below="@id/topic_author_statistics1"
                android:layout_toRightOf="@id/user_icon"
                android:text="@string/hello_world"
                android:textColor="@color/muted"
                android:textSize="15sp" />
        -->

        <TextView
            android:id="@+id/topic_author_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topic_author_statistics1"
            android:layout_toRightOf="@id/user_icon"
            android:paddingLeft="5dp"
            android:text="@string/hello_world"
            android:textColor="@color/muted"
            android:textSize="14sp" />
    </RelativeLayout>

    <WebView
        android:id="@+id/topic_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/send_reply"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/send_reply"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/send_reply_icon"
            android:contentDescription="@string/hello_world"
            android:layout_gravity="center_vertical"
            android:src="@drawable/social_send_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
        
</LinearLayout>